fix navbar items alignment

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@ code {
 nav.mb-3.mt-4 {
   border-bottom: 1px solid #c7c3c3;
   padding-bottom: 30px;
+  width: 100%;
 }
 
 .container > h1 {
@@ -27,7 +28,7 @@ nav.mb-3.mt-4 {
 }
 
 .mb-3.mt-4 {
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .carousel-control-prev, .carousel-control-next {
   width: 30% !important;
